# down

./: README.md  app.py  pyproject.toml  video_downloader.py
attached_assets/: Pasted--usr-bin-env-python3-import-os-import-re-import-sys-import-requests-import-random-import-time-impo-1747351551930.txt
static/css/: custom.css
static/js/: main.js
templates/: index.html  layout.html
