[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-ffmpeg>=2.0.12",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
    "youtube-dl>=2021.12.17",
]
